manifests/prometheus/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: prometheus
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 80
    targetPort: web
  selector:
    app: prometheus
