manifests/prometheus/ingress.yaml
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: traefik
    cert-manager.io/issuer: letsencrypt
    cert-manager.io/issuer-kind: ClusterIssuer
    acme.cert-manager.io/http01-ingress-class: traefik
    traefik.ingress.kubernetes.io/redirect-entry-point: https
    traefik.ingress.kubernetes.io/redirect-permanent: "true"
    ingress.kubernetes.io/ssl-redirect: "true"
    ingress.kubernetes.io/ssl-temporary-redirect: "false"
  name: prometheus
spec:
  rules:
  - host: prometheus.example.org
    http:
      paths:
      - path: /
        backend:
          serviceName: prometheus
          servicePort: 80
  tls:
  - hosts:
    - prometheus.example.org
    secretName: prometheus-server-tls
